# arcology

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  ngrok.yml
bridge/: Dockerfile  pyproject.toml  server.py
bridge/core/: auth.py  config.py  logger.py
bridge/models/: __init__.py  mcp.py  obsidian.py
bridge/routes/: health.py  mcp.py  obsidian.py
bridge/services/: http_client.py  mcp_client.py  obsidian_client.py
bridge/tests/system/: conftest.py  test_mcp_bridge.py
bridge/tests/unit/: test_models_mcp.py  test_models_obsidian.py
mcp-bridge/: Dockerfile  bridge.py  cli.py
patches/mcp_obsidian/: tools.py
