[tool.poetry]
name = "bridge"
version = "0.0.1"
description = "MCP bridge for: Obsidian"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
httpx = "^0.25.2"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
ruff = "^0.1.6"
pyright = "^1.1.383"

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["I"]  # isort rules

[tool.ruff.lint.isort]
# Tell ruff which modules are yours to make the 3rd block
known-first-party = ["bridge"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
combine-as-imports = true

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = [
    "bridge",
    "tests",
]
exclude = [
    "alembic/versions",
]
stubPath = "/app/typings"
reportMissingImports = "warning"
reportMissingTypeStubs = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

